projects/vb6parse/snapshots/syntax/statements/control_flow/on_statements/on_error_in_if_statement.snap
---
source: projects/vb6parse/src/syntax/statements/control_flow/on_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: IfStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: IfKeyword
                  text: If
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: needsErrorHandling
                - kind: Whitespace
                  text: " "
                - kind: ThenKeyword
                  text: Then
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: OnErrorStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: OnKeyword
                          text: "On"
                        - kind: Whitespace
                          text: " "
                        - kind: ErrorKeyword
                          text: Error
                        - kind: Whitespace
                          text: " "
                        - kind: GotoKeyword
                          text: GoTo
                        - kind: Whitespace
                          text: " "
                        - kind: Identifier
                          text: ErrorHandler
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: IfKeyword
                  text: If
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
