projects/vb6parse/snapshots/syntax/statements/control_flow/on_statements/on_error_resume_next.snap
---
source: projects/vb6parse/src/syntax/statements/control_flow/on_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: OnErrorStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: OnKeyword
                  text: "On"
                - kind: Whitespace
                  text: " "
                - kind: ErrorKeyword
                  text: Error
                - kind: Whitespace
                  text: " "
                - kind: ResumeKeyword
                  text: Resume
                - kind: Whitespace
                  text: " "
                - kind: NextKeyword
                  text: Next
                - kind: Newline
                  text: "\n"
            - kind: MkDirStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: MkDirKeyword
                  text: MkDir
                - kind: Whitespace
                  text: " "
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"C:\\Temp\""
            - kind: Newline
              text: "\n"
            - kind: MkDirStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: MkDirKeyword
                  text: MkDir
                - kind: Whitespace
                  text: " "
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"C:\\Data\""
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
